welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:32: error: not found: value reculer
reculer();
^Balin:34: error: not found: value avancer
avancer(); 
^